# libAudio

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  ChangeLog  FFT.h  ImpulseTracker.h  LICENSE  Makefile  Makefile.inc  ProTracker.h  README  README.md  WMA decoding summary.txt  build32.sh  build64.sh  build64Debian.sh  buildClang.sh  buildGCC8.sh  dllcopy.bat  libAudio.def  libAudio.h  libAudio.la  libAudio.pc  libAudio.sln  libAudio.vcproj  libAudio_Common.cpp  libAudio_Common.h  loadAAC.cpp  loadAudio.cpp  loadFLAC.cpp  loadIT.cpp  loadM4A.cpp  loadMOD.cpp  loadMP3.cpp  loadMPC.cpp  loadOggVorbis.cpp  loadOptimFROG.cpp  loadRealAudio.cpp  loadShorten.cpp  (+14 more)
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  main.yml  workflow.yml
.travis-ci/: beforeInstall.sh  install.sh  script.sh
Experimental/: OggVorbis.h  libAudio.def  libAudio.h  libAudio_Common.cpp  libAudio_Common.h  loadAAC.cpp  loadFLAC.cpp  loadIT.cpp  loadOggVorbis.cpp  loadWAV.cpp  loadWMA.h  loadWavPack.cpp  saveFLAC.cpp  saveOggVorbis.cpp
Experimental/mixIT/: Interfaces.h
Spectrometer/: .gitignore  AboutBox.cpp  AboutBox.h  DrawingFunctions.cpp  DrawingFunctions.h  FFT.c  FFT.h  Icon.cpp  Icon.h  Makefile  Makefile.inc  Playback.cpp  Playback.h  Spectrometer.cpp  Spectrometer.vcproj  VUMeter.cpp  VUMeter.h
Spectrometer/ico/: Spectrometer_128x128.h  Spectrometer_16x16.h  Spectrometer_32x32.h  Spectrometer_48x48.h  Spectrometer_64x64.h
Spectrometer/img/: amber_bar.h  black_bar.h  green_bar.h  red_bar.h
WMADecode/: WMADecode.vcproj  main.cpp
WMADemux/: WMADemux.vcproj  main.cpp
bindings/: meson.build
bindings/python/: audioFile.cxx  audioFile.hxx  interface.hxx  libAudioPython.cxx  meson.build
docs/: .gitignore  ASF_Specification.doc  footer.html  layout.libAudio.xml  libAudio.conf  libAudio.css  libAudio.dox  style.css
docs/moduleMixer/: Delusion Digital Music Format - v0.25.cp437.txt.utf-8.txt  DigiTrekker Module Format.cp437.txt.utf-8.txt  Fandarole composer module file format.ascii.txt.utf-8.txt  Format Specifications (FAR, FSM, USM, F2R) by Daniel Potter.cp437.txt.utf-8.txt  MultiTrack Module Editor format.ascii.txt.utf-8.txt  Poly Tracker module format.cp437.txt.utf-8.txt  Protracker 1.1B Module Format (2).cp437.txt.utf-8.txt  Protracker 2.3 Module Format.ascii.txt.utf-8.txt  Protracker MOD file format.cp437.txt.utf-8.txt  Protracker Module Format.html  Protracker Module effects.cp437.txt.utf-8.txt  Scream Tracker 3 Module - MultimediaWiki.html  Scream Tracker 3.20 File Formats And Mixing Info.cp437.txt.utf-8.txt  Scream Tracker 3.20 file format.cp437.txt.utf-8.txt  Ultra Tracker module format.cp437.txt.utf-8.txt  XM module format description for XM files version v1.04.ascii.txt.utf-8.txt  (+2 more)
fuzz/: fuzz.cxx  meson.build
harness/: fuzz.cxx
libAudio/: Android.mk  ArtOfNoise.h  FFT.h  FutureComposer.h  ImpulseTracker.h  Makefile  ProTracker.h  ScreamTracker.h  WMA_HuffTables.h  console.cxx  console.hxx  conversions.hxx  fd.hxx  fileInfo.cxx  fileInfo.hxx  fixedVector.hxx  flac.hxx  libAudio.def  libAudio.h  libAudio.hxx  libAudio.pc.in  libAudio.rc.in  libAudio.vcproj  libAudio_Common.cpp  libAudio_Common.h  loadAAC.cpp  loadAON.cpp  loadAudio.cpp  loadFC1x.cpp  loadFLAC.cpp  loadIT.cpp  loadM4A.cpp  loadMOD.cpp  loadMP3.cpp  loadMP3.cxx  loadMPC.cpp  loadOggOpus.cxx  loadOggVorbis.cpp  loadOptimFROG.cpp  loadRealAudio.cpp  (+33 more)
libAudio/emulator/: atariSTe.cxx  atariSTe.hxx  atariSTeROMs.cxx  atariSTeROMs.hxx  clockManager.cxx  gemdosAlloc.cxx  gemdosAlloc.hxx  memoryMap.hxx  ram.hxx  unitsHelpers.hxx
libAudio/emulator/cpu/: 68000.cxx  68000.hxx  m68k.cxx  m68k.hxx  m68kIRQ.hxx  m68kInstruction.cxx  m68kInstruction.hxx
libAudio/emulator/sound/: steDAC.cxx  steDAC.hxx  ym2149.cxx  ym2149.hxx
libAudio/emulator/timing/: mc68901.cxx  mc68901.hxx
libAudio/fixedPoint/: Android.mk  fixedPoint.cpp  fixedPoint.h
libAudio/fixedPoint/tests/: Makefile  TestFineLinearSlideDown.cpp  TestFineLinearSlideUp.cpp  TestLinearSlideDown.cpp  TestLinearSlideUp.cpp
libAudio/genericModule/: Android.mk  ModuleEffects.cpp  ModuleFile.cpp  ModuleHeader.cpp  ModuleInstrument.cpp  ModulePattern.cpp  ModuleSample.cpp  effects.h  genericModule.h
libAudio/mixIT/: fir_mix.h  mixIT.cpp  mmx_mix.h  rvb_mix.h  std_mix.h
libAudio/moduleMixer/: Android.mk  channel.cxx  frequencyTables.h  loopScanner.cxx  mixFunctionTables.h  mixFunctions.h  moduleMixer.cpp  moduleMixer.h  test.cpp  waveTables.h
libAudio/sndh/: atariASCII.hxx  iceDecrunch.cxx  iceDecrunch.hxx  iceDepack.cxx  iceDepack.hxx  loader.cxx  loader.hxx
libAudio/windows/sys/: types.h
libAudioDepends/: .gitignore  GTK++  OptimFROG.lib  libFLAC_dynamic.lib  libfaac.lib  libfaac_d.lib  libfaad.lib  libfaad_d.lib  libmp4v2.lib  libmp4v2_d.lib  libmpcdec.lib  libmpcdec_d.lib  mp4v2-1.9.1
libAudio_ReEncode_Ogg/: Makefile  libAudio_ReEncode_Ogg.vcproj  main.cpp
libAudio_S3MHasCmd/: Makefile  main.cpp
libAudio_TestApp/: Makefile  main.cpp
mixIT/: Interfaces.h  mixIT.cpp  std_mix.h
moduleMixer/: mixFunctions.h  moduleMixer.cpp  moduleMixer.h
player/: Makefile  file.hxx  libAudio_TestApp.vcproj  main.cpp  meson.build  player.cxx  stdStream.hxx  stream.hxx  streamFormatter.hxx
spectrometer/: meson.build  playback.cxx  spectrometer.cxx  spectrometer.hxx  spectrometer.ui
test/: meson.build
test/libAudio/: fd.cxx  fixedVector.cxx  meson.build  string.cxx  testFD.cxx  testFD.hxx  testFileInfo.cxx  testFixedVector.cxx  testString.cxx  testString.hxx
test/libAudio/emulator/: atariSTe.sndh  atariSTeSNDH.s  atariSTeSNDH.sh  meson.build  testAtariSTe.cxx  testAtariSTeROMs.cxx  testClockManager.cxx
test/libAudio/emulator/cpu/: meson.build  testM68k.cxx  testM68kDecodeTable.hxx
test/libAudio/emulator/sound/: meson.build  testSTeDAC.cxx  testYM2149.cxx
test/libAudio/emulator/timing/: meson.build  testMC68901.cxx
test/libAudio/fixedPoint/: meson.build  slideTestCommon.hxx  testFineLinearSlideDown.cxx  testFineLinearSlideUp.cxx  testLinearSlideDown.cxx  testLinearSlideUp.cxx
transcoder/: meson.build  transcoder.cxx
(+73 files in other folders)
